Corrected the css for the projects section on mobile.

--- a/frontend/src/css/projects.css
+++ b/frontend/src/css/projects.css
@@ -64,4 +64,21 @@
   .project-details a:hover {
     background-color: white;
   }
+
+/* Manages mobile/decreased device screen.*/
+@media only screen and (max-width: 767px) {
+#projects {
+    padding-top: 50px;
+}
+.projects-container {
+  margin: 10px 10px 20px 0px;
+  padding: 8px 12px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  min-height: 80vh;
+}
+.project-card {
+  border-radius: 10px;
+  padding: 20px;
+}
+}
   
